--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,14 @@
-FROM node:16
-WORKDIR /usr/src/app
-COPY package*.json ./
+#FROM node:16
+FROM node:10-alpine
+#Crear directorio para la aplicación
+WORKDIR /app
+#Importar el archivo json del proyecto
+COPY package.json .
+#Instalar complementos del archivo
 RUN npm install
+#Copiar todos los archivos del proyecto
 COPY . .
-CMD ["node", "index.js"]
+#Publicar puerto
+#EXPOSE 5000 
+#Esta línea no se necesita en HEROKU
+CMD [ "node", "index.js" ]
